@@ -1,13 +1,14 @@
 TODO for today: 
 
-* start the app on  "resume"
+* start the app on  "resume" (partly done)
 
-* show alarm icons on alarm events
+* show alarm icons on alarm events (partly done)
 
 * add am/pm mode instead of 24 h, take system default
-
-* fix 23 pm bug		 (done??)
 
 * qcop integration for updating events?
 
 * sort todos by pri.
+
+* make Opiezilla a clickable label wich is allway on the far right side of
+the screen , klick will open credits ,)
