@@ -1,3 +1,7 @@
+
+* Appointments are now clickable (connection to datebook still missing)
+* autostart support (opie only)
+
 0.2.7
 
 * check if todolist.xml was changed before parsing it
